[project]
name = "r9y"
version = "0.1.0"
description = "Research on reliability of software-hardware systems"
readme = "README.md"
authors = [
    { name = "Leshnevskyi", email = "leshnevskyi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[project.scripts]
r9y = "r9y:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
